Fix a few Coverity inspection results plus more IntelliJ results